# CS5052-Spark

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  notebook.ipynb  pyproject.toml
api/: Dockerfile  pyproject.toml
api/app/: data.py  log.py  main.py  model.py  notebook.ipynb  recommendations.py  utils.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  api.js  app.js  app_container.js  index.js  main.js  result.js  results.js  search.js  setupProxy.js  validate.js  visualisations.js
frontend/src/results/: additionalInfo.js  api.js  baseResult.js  compareUsers.js  genreResult.js  genreStatistics.js  index.js  movieResult.js  recommendations.js  resultsTable.js  userResult.js
frontend/src/results/d3/: clusterUsers.js  compareUsers.js  cultserUsers.js  d3BarChart.js  d3Base.js  genreStatistics.js  index.js
src/: hello_world.py
