[tool.poetry]
name = "cs5052-spark"
version = "0.1.0"
description = "CS5052 Project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.0.1"
pandas = "^1.2.2"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
